# anon-ticket

./: .env.example  .gitignore  .torrc  CHANGELOG.md  Cargo.toml  README.md  TODO.md  clippy.toml  deny.toml
.github/workflows/: cargo-deny.yml
config/: README.md
crates/api/: Cargo.toml  DESIGN.md  README.md
crates/api/src/: application.rs  main.rs  state.rs  tests.rs
crates/api/src/handlers/: metrics.rs  mod.rs  redeem.rs  token.rs
crates/domain/: Cargo.toml  DESIGN.md  README.md
crates/domain/src/: cache.rs  config.rs  integrated_address.rs  lib.rs  telemetry.rs
crates/domain/src/model/: mod.rs
crates/domain/src/services/: cache.rs  mod.rs  telemetry.rs
crates/domain/src/storage/: mod.rs  traits.rs
crates/monitor/: BLOG.md  Cargo.toml  DESIGN.md  README.md  secure-monero-rpc-deployment.md
crates/monitor/src/: client.rs  lib.rs  main.rs  pipeline.rs  worker.rs
crates/monitor/src/rpc/: mod.rs  types.rs
crates/storage/: Cargo.toml  DESIGN.md  README.md
crates/storage/src/: builder.rs  entity.rs  errors.rs  lib.rs  migration.rs  monitor_state_store.rs  payment_store.rs  token_store.rs
docs/: ARCHITECTURE_STRATEGY.md
docs/security/: payment-id-security.md
