[workspace]
members = [
    "crates/api",
    "crates/domain",
    "crates/monitor",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Anon-Ticket Contributors"]

[workspace.dependencies]
dotenvy = "0.15"
sha3 = "0.10"
hex = "0.4"
thiserror = "1"
