[workspace]
members = [
    "crates/api",
    "crates/domain",
    "crates/monitor",
    "crates/storage",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Anon-Ticket Contributors"]

[workspace.dependencies]
sha3 = "0.10"
hex = "0.4"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sea-orm = { version = "0.12", default-features = false, features = ["macros", "runtime-tokio-rustls", "with-chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = { version = "4", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.14", features = ["http-listener"] }
moka = { version = "0.12.11", default-features = false, features = ["sync"] }
getrandom = "0.3"
cfg-if = "1"
monero = "0.21"
monero-rpc = "0.5"
fastbloom = "0.14"
strum = "0.25"
strum_macros = "0.25"
