[package]
name = "anon_ticket_api"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
publish = false

[dependencies]
actix-web.workspace = true
anon_ticket_domain = { path = "../domain" }
anon_ticket_storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
metrics.workspace = true
tracing.workspace = true
