[package]
name = "anon_ticket_domain"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
publish = false

[dependencies]
dotenvy.workspace = true
hex.workspace = true
sha3.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
once_cell.workspace = true
moka.workspace = true
