[package]
name = "anon_ticket_domain"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
publish = false

[dependencies]
hex.workspace = true
sha3.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
once_cell.workspace = true
moka.workspace = true
getrandom.workspace = true
cfg-if.workspace = true
monero.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
