[package]
name = "anon_ticket_domain"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
publish = false

[features]
default = []
# Enable when targeting wasm32; provides JS RNG support via getrandom.
wasm = ["getrandom/wasm_js"]

[dependencies]
hex.workspace = true
sha3.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
once_cell.workspace = true
moka.workspace = true
getrandom.workspace = true
cfg-if.workspace = true
monero.workspace = true
