[package]
name = "anon_ticket_monitor"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
publish = false

[dependencies]
anon_ticket_domain = { path = "../domain" }
anon_ticket_storage = { path = "../storage" }
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
